Use the -webkit-mask-image to fix the Chrome overflow hidden bug

--- a/src/sass/layout/_speakers.sass
+++ b/src/sass/layout/_speakers.sass
@@ -10,6 +10,7 @@
     margin: 10px 1vw
     position: relative
     overflow: hidden
+    -webkit-mask-image: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAIAAACQd1PeAAAAGXRFWHRTb2Z0d2FyZQBBZG9iZSBJbWFnZVJlYWR5ccllPAAAAA5JREFUeNpiYGBgAAgwAAAEAAGbA+oJAAAAAElFTkSuQmCC)
     +susy-breakpoint($width-ex-small, 12)
       width: 40vw
     +susy-breakpoint($width-medium, 12)
