--- a/src/sass/layout/_staff.sass
+++ b/src/sass/layout/_staff.sass
@@ -16,6 +16,7 @@
     // padding: 10px
     margin: 10px
     border-radius: 10px
+    -webkit-mask-image: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAIAAACQd1PeAAAAGXRFWHRTb2Z0d2FyZQBBZG9iZSBJbWFnZVJlYWR5ccllPAAAAA5JREFUeNpiYGBgAAgwAAAEAAGbA+oJAAAAAElFTkSuQmCC)
     overflow: hidden
     position: relative
     +susy-breakpoint($width-small, 12)
